# Batimg

./: .gitignore  Cargo.toml  README.md
batimg/cli/: Cargo.toml
batimg/cli/src/: batimage.rs  batvideo.rs  batvideostream.rs  main.rs
batimg/core/: Cargo.toml
batimg/core/src/: graphics.rs  lib.rs
lib/videostream/: Cargo.toml  README.md
lib/videostream/src/: lib.rs
src/: graphics.rs  main.rs
