[package]
name = "batimg"
version = "1.2.1"
edition = "2018"

[dependencies]
terminal_size = "0.1.17"
clap = "3.0.0-rc.8"
image = "0.23.14"
rodio = "0.14.0"
ctrlc = "3.2.1"
regex = "1.12.2"
tempfile = "3.23.0"

[dependencies.ffmpeg-next]
version = "8.0"
default-features = false
features = ["codec", "format", "software-scaling"]

